# pbrnerf

./: README.md  ablation_pbr_losses.sh  run_all_mariana.sh  run_all_marineris.sh  run_all_tonga.sh  setup_conda.sh  setup_dataset.sh  setup_pip.sh  sota_dtu.sh  sota_neilfpp.sh  sweep_pbrnerf_dtu.sh  sweep_pbrnerf_neilfpp.sh  train_energy_cons_loss.sh  train_ndf_weighted_specular_loss.sh  train_neilfpp.sh  train_neilfpp_dtu.sh  train_neilfpp_dtu_ngp.sh  train_neilfpp_no_lambertian.sh  train_pbrnerf_GlossyReal.sh  train_pbrnerf_GlossySynthetic.sh  train_pbrnerf_dtu.sh  train_pbrnerf_neilfpp.sh  train_pbrnerf_nerfsynthetic.sh
code/configs/: config_GlossyReal_pbrnerf.json  config_dtu_pbrnerf.json  config_dtu_volsdf.json  config_dtu_volsdf_ngp.json  config_hdr_volsdf_ngp.json  config_nerfsynthetic_pbrnerf.json  config_synthetic_data.json  config_synthetic_data_brdf_weighted_specular_loss.json  config_synthetic_data_energy_cons_loss.json  config_synthetic_data_neilfpp.json  config_synthetic_data_neilfpp_no_lambertian.json  config_synthetic_data_pbrnerf_neilfpp.json
code/dataset/: dataset.py
code/evaluation/: evaluate.py
code/pyrt/common/gdt/: CMakeLists.txt
code/pyrt/common/gdt/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_build_type.cmake  configure_optix.cmake  configure_tbb.cmake
code/pyrt/common/gdt/gdt/: gdt.h
code/pyrt/common/gdt/gdt/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  fixedpoint.h  vec.h
code/pyrt/common/gdt/gdt/math/vec/: compare.h  functors.h  rotate.h
code/pyrt/common/gdt/gdt/random/: random.h
code/utils/: io.py  (+2 more)
(+17 files in other folders)
